--- a/css/theme.css
+++ b/css/theme.css
@@ -1147,7 +1147,7 @@ div.slider-container div.top-label {
 }
 
 div.slider-container div.main-label {
-	color: #FFF;
+	color: #129cbf;
 	font-size: 42px;
 	line-height: 62px;
 	font-weight: 800;
