--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -329,6 +329,11 @@ img {
     height: auto
 }
 
+.img-custom, .thumbnail > img, .thumbnail a > img, .carousel-inner > .item > img, .carousel-inner > .item > a > img {
+    display: block;
+    max-width: 100%;
+}
+
 .img-rounded {
     border-radius: 6px
 }
